more text and edited figure

--- a/docs/midterm_presentation/pres.tex
+++ b/docs/midterm_presentation/pres.tex
@@ -31,9 +31,11 @@
 \begin{frame}{Computer Vision}
   \begin{itemize}
 
-    \item Artificial Intelligence - the goal of creating intelligence for machines/software
+    \item Artificial Intelligence - the goal of creating intelligence for
+          machines/software
 
-    \item Computer Vision - teaching computers to understand the natural world through images
+    \item Computer Vision - teaching computers to understand the natural world
+          through images
 
     \item Data to train or test on is integral to success
 
@@ -45,40 +47,43 @@
 \section{Citizen-Science}
 
 \begin{frame}{Citizen-Science}
-  Citizen-science is a form of crowdsourcing in which participants
-  collect or analyze data. Typically, the tasks they perform are
-  simple
-  in nature. For example, they may be asked to take a photo, measure
-  the 
-  temperature, or translate text.
+  \begin{itemize}
+    
+    \item Citizen-Science - form of crowdsourcing where participants
+          collect/analyze data
 
-  This model is successful due to the ability of humans to perform
-  such
-  tasks extremely easily and in large numbers, often at little to no
-  cost in time or effort. For a single research team to collect such
-  large amounts of data on their own would be both costly and time
-  consuming. Often, automating these tasks is impossible for
-  computers,
-  or is in fact the very aim of a projects principle investigators.
+    \item Typically performed tasks are simple (\textit{e.g.} take a photo,
+          measure temperature, translate text, etc.)
+
+    \item Humans can perform simple tasks easily and in large quantities,
+          often with little time or effort
+
+    \item Collecting large amounts of data is intractable for a single 
+          researcher
+
+  \end{itemize}
 \end{frame}
 
 \section{Why a game?}
 
 \begin{frame}{Why a Game?}
-  One of the drawbacks of citizen-science style is the sharp fall-off
-  in
-  user contributions as the initial interest wears off. One way to
-  mitigate this decline in contribution is to ``game-ify'' the
-  process.
-  By abstracting out the actual data collection and telling users they
-  are participating in a global scale scavenger hunt, we expect that
-  users will stay engaged and, more importantly, keep contribuing data
-  for scientists to study.
+  \begin{itemize}
+    
+    \item Contributions to citizen-science style datasets drop off after
+          the initial interest wears off
+  
+    \item Using ``gamification'' can mitigate this decline
+  
+    \item Our goal - abstract out the data collection, tell users they
+          are competing in a global scavenger hunt
 
-  Part of ``game-ify-ing'' PhotoHunter will involve assigning point
-  values for both collecting and reviewing data. The users interaction
-  with the website should be short, sweet, and rewarding. One of the
-  ways to reward users is the use of a leaderboard.
+    \item Users will stay engaged/contributing to earn more points
+
+    \item Photohunter will assign points for collecting and reviewing data
+
+    \item Leaderboards will encourage competition between users
+
+  \end{itemize}
 \end{frame}
 
 \section{Overview}
