slide titles and edited makefile

--- a/docs/midterm_presentation/pres.tex
+++ b/docs/midterm_presentation/pres.tex
@@ -103,7 +103,7 @@
   dataset.
 \end{frame}
 
-\begin{frame}
+\begin{frame}{Researchers Interface}
   \includegraphics[width=\columnwidth]{researchers}
 \end{frame}
 
@@ -129,7 +129,7 @@
   take advantage of built in sensors (time, gps, heading, etc.).
 \end{frame}
 
-\begin{frame}
+\begin{frame}{Photohunter}
   \begin{columns}[c]
     \begin{column}{0.5\columnwidth}
       \includegraphics[width=\columnwidth]{ss_photohunter_dataset}
@@ -156,7 +156,7 @@
   we can be reasonably certain that the datapoint should be trusted.
 \end{frame}
 
-\begin{frame}
+\begin{frame}{QuickPic}
   \begin{columns}[c]
     \begin{column}{0.5\columnwidth}
       \includegraphics[width=\columnwidth]{ss_quickpic_image}
