--- a/docs/midterm_presentation/pres.tex
+++ b/docs/midterm_presentation/pres.tex
@@ -49,7 +49,7 @@
 \begin{frame}{Citizen-Science}
   \begin{itemize}
     
-    \item Citizen-Science - form of crowdsourcing where participants
+    \item Citizen-Science - form of crowd-sourcing where participants
           collect/analyze data
 
     \item Typically performed tasks are simple (\textit{e.g.} take a photo,
@@ -79,9 +79,9 @@
 
     \item Users will stay engaged/contributing to earn more points
 
-    \item Photohunter will assign points for collecting and reviewing data
+    \item PhotoHunter will assign points for collecting and reviewing data
 
-    \item Leaderboards will encourage competition between users
+    \item Leader-boards will encourage competition between users
 
   \end{itemize}
 \end{frame}
@@ -117,7 +117,7 @@
 
 \section{PhotoHunter}
 
-\begin{frame}{Photohunter}
+\begin{frame}{PhotoHunter}
   From the mobile app, users will be presented with a list of
   datapoints
   to go collect in their area, and a time limit in which each must be
@@ -126,10 +126,10 @@
   them to continue.
 
   Data collection will only occur within the mobile app so that we may
-  take advantage of built in sensors (time, gps, heading, etc.).
+  take advantage of built in sensors (time, GPS, heading, etc.).
 \end{frame}
 
-\begin{frame}{Photohunter}
+\begin{frame}{PhotoHunter}
   \begin{columns}[c]
     \begin{column}{0.5\columnwidth}
       \includegraphics[width=\columnwidth]{ss_photohunter_dataset}
