added er diagram

--- a/docs/midterm_presentation/pres.tex
+++ b/docs/midterm_presentation/pres.tex
@@ -104,7 +104,8 @@
 \end{frame}
 
 \begin{frame}{Researchers Interface}
-  \includegraphics[width=\columnwidth]{researchers}
+  \centering
+  \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{researchers}
 \end{frame}
 
 \begin{frame}
@@ -112,7 +113,8 @@
 \end{frame}
 
 \begin{frame}
-  \todo{ER diagrams}
+  \centering
+  \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{er}
 \end{frame}
 
 \section{PhotoHunter}
@@ -132,10 +134,12 @@
 \begin{frame}{PhotoHunter}
   \begin{columns}[c]
     \begin{column}{0.5\columnwidth}
-      \includegraphics[width=\columnwidth]{ss_photohunter_dataset}
+      \centering
+      \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{ss_photohunter_dataset}
     \end{column}
     \begin{column}{0.5\columnwidth}
-      \includegraphics[width=\columnwidth]{ss_photohunter_upload}
+      \centering
+      \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{ss_photohunter_upload}
     \end{column}
   \end{columns}
 \end{frame}
@@ -159,10 +163,12 @@
 \begin{frame}{QuickPic}
   \begin{columns}[c]
     \begin{column}{0.5\columnwidth}
-      \includegraphics[width=\columnwidth]{ss_quickpic_image}
+      \centering
+      \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{ss_quickpic_image}
     \end{column}
     \begin{column}{0.5\columnwidth}
-      \includegraphics[width=\columnwidth]{ss_quickpic_options}
+      \centering
+      \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{ss_quickpic_options}
     \end{column}
   \end{columns}
 \end{frame}
