er diagram title

--- a/docs/midterm_presentation/pres.tex
+++ b/docs/midterm_presentation/pres.tex
@@ -112,7 +112,7 @@
   \todo{mockups}
 \end{frame}
 
-\begin{frame}
+\begin{frame}{ER Diagram}
   \centering
   \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{er}
 \end{frame}
