photohunter slide text and flowchart

--- a/docs/midterm_presentation/pres.tex
+++ b/docs/midterm_presentation/pres.tex
@@ -89,7 +89,8 @@
 \section{Overview}
 
 \begin{frame}{Overview}
-  \todo{Flowchart}
+  \centering
+  \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{ss_flowchart}
 \end{frame}
 
 \section{Backend}
@@ -120,15 +121,20 @@
 \section{PhotoHunter}
 
 \begin{frame}{PhotoHunter}
-  From the mobile app, users will be presented with a list of
-  datapoints
-  to go collect in their area, and a time limit in which each must be
-  completed. As each task is completed, they will gain points,
-  prompting
-  them to continue.
+  \begin{itemize}
+    
+    \item Mobile application
 
-  Data collection will only occur within the mobile app so that we may
-  take advantage of built in sensors (time, GPS, heading, etc.).
+    \item Users presented with list of categories
+
+    \item Each category represents a dataset in their location
+
+    \item Gain points for completed tasks
+
+    \item Data collection only occurs within this mobile app so
+          we can take advantage of built in sensors
+
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{PhotoHunter}
