reorder and itemize backend slide

--- a/docs/midterm_presentation/pres.tex
+++ b/docs/midterm_presentation/pres.tex
@@ -96,26 +96,24 @@
 \section{Backend}
 
 \begin{frame}{Backend}
-  Research groups may be created on request. 
+  \begin{itemize}
+    \item Research groups may be created on request. 
 
-  Research groups will have an interface where they may request
-  datasets. From this interface groups may define GPS bounding boxes,
-  time frames, and other metadata they are interested in for a given
-  dataset.
-\end{frame}
+    \item Researcher interface where they may request datasets. 
 
-\begin{frame}{Researchers Interface}
-  \centering
-  \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{researchers}
-\end{frame}
-
-\begin{frame}
-  \todo{mockups}
+    \item define GPS bounding boxes, time frames, and other metadata they are 
+      interested in for a given dataset.
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{ER Diagram}
   \centering
   \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{er}
+\end{frame}
+
+\begin{frame}{Researchers Interface}
+  \centering
+  \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{researchers}
 \end{frame}
 
 \section{PhotoHunter}
