editing the requirements doc

--- a/docs/requirements/req.tex
+++ b/docs/requirements/req.tex
@@ -89,9 +89,8 @@ responsive design to accommodate users visiting on a mobile device's browser.
 
 \subsection{Mobile Application}
 The two mobile applications for the PhotoHunter Project will be developed with
-cross-platform tool, allowing the applications to be deployed to both
-iOS version 8 and Android version 5.0 (Lollipop) \todo{verify target
-versions}.
+cross-platform tool, allowing the applications to be deployed to Android
+version 4.4.2 (Kit-Kat) and, if time permits, iOS version 8.
 
 \section{Architecture}
 
