Basic use cases for PhotoHunter and QuickPic.

--- a/docs/design/design.tex
+++ b/docs/design/design.tex
@@ -256,8 +256,45 @@ After logging in, a user may visit one of the following pages on the dashboard:
 \end{itemize}
 \subsection{PhotoHunter}
 
+\begin{itemize}
+\item Log In: A user can log in to their account using their credentials. They will then be taken to their dashboard.
+\item Create Account: A new user may create an account by signing up.
+\end{itemize}
+
+After logging in, a user may visit one of the following views:
+
+\begin{itemize}
+\item Scavenger List: A list of Scavenger List Entries which have been
+  requested by Research Teams. Choosing an entry will launch the native Camera
+  application, allowing users to capture and submit a picture.
+\item Leaderboard: A view presenting an overview of the top users relative to
+  the logged in user for the PhotoHunter application.  Various metrics may be
+  presented, such as ``Most Points (All Time)'', ``Most Points (Past Month)'',
+  ``Most Submissions (All Time)'', ``Most Points Per Submission (All Time)''.
+
+\item Account: A view allowing the user to update account information.
+\end{itemize}
+
 \subsection{Quick Pic}
 
+\begin{itemize}
+\item Log In: A user can log in to their account using their credentials. They will then be taken to their dashboard.
+\item Create Account: A new user may create an account by signing up.
+\end{itemize}
+
+\begin{itemize}
+\item Label Images: A user will be presented with an image to label.  The
+  amount of time they are given to view the image may depend on their overall
+  score.  They will then be asked to choose a label.  Upon choosing a label,
+  they will be presented with some information about their accuracy and asked
+  to label another image.
+\item Leaderboard: A view presenting an overview of the top users relative to
+  the logged in user for the PhotoHunter application.  Various metrics may be
+  presented, such as ``Most Points (All Time)'', ``Most Points (Past Month)'',
+  ``Most Submissions (All Time)'', ``Most Points Per Submission (All Time)''.
+
+\item Account: A view allowing the user to update account information.
+\end{itemize}
 \section{Design Considerations}
 
 \section{Sizing Estimate}
