--- a/docs/design/design.tex
+++ b/docs/design/design.tex
@@ -30,42 +30,71 @@ are then provided to the researchers that requested the dataset. The system
 provides entertainment for users and useful datasets for researchers.
 
 \section{Environment}
-The web interface and API for the PhotoHunter Project will be built with Go using PostgreSQL for the database. The backend will run on a DigitalOcean Droplet virtual server. The interface will be tested and fitted to the latest versions of the Mozilla Firefox and Google Chrome web browsers. The mobile applications for the PhotoHunter Project will be built using the Apache Cordova API set. This framework allows smartphone applications to be developed using HTML, CSS, and Javascript. The initial target device will be Android.
+The web interface and API for the PhotoHunter Project will be built with Go
+using PostgreSQL for the database. The backend will run on a DigitalOcean
+Droplet virtual server. The interface will be tested and fitted to the latest
+versions of the Mozilla Firefox and Google Chrome web browsers. The mobile
+applications for the PhotoHunter Project will be built using the Apache Cordova
+API set. This framework allows smartphone applications to be developed using
+HTML, CSS, and Javascript. The initial target device will be Android.
 
 \section{Module Descriptions and Data Flow}
-The overall data flow between the four main components of the PhotoHunter application follows:
+The overall data flow between the four main components of the PhotoHunter
+application follows:
 \begin{figure}
   \centering
   \includegraphics[scale = 0.5]{ss_flowchart}
 \end{figure}
 
 \subsection{Researcher Interface}
-The researcher interface allows users to request datasets, view the status of any open dataset, and download their dataset.
+The researcher interface allows users to request datasets, view the status of
+any open dataset, and download their dataset.
 
 \paragraph{Create Account}
-The create account form allows a new user to register their information in the database. The Go server generates an HTML form requesting the user's name, email address, requested user name, and password. When the user submits the form, the password is encrypted using bCrypt, a Go library, and all information is added to the user table in the database.
+The create account form allows a new user to register their information in the
+database. The Go server generates an HTML form requesting the user's name,
+email address, requested user name, and password. When the user submits the
+form, the password is encrypted using bCrypt, a Go library, and all information
+is added to the user table in the database.
 
 \paragraph{Log in to Account}
-The login form allows a user to log in to their account. Once a user inputs their user name and password and submits, the Go server selects the user name from the user SQL table, checks the provided password against the correct one, and provides the user with an error message if the account can not be found. If the log in is successful, a new session is created associated with the logged in user.
+The login form allows a user to log in to their account. Once a user inputs
+their user name and password and submits, the Go server selects the user name
+from the user SQL table, checks the provided password against the correct one,
+and provides the user with an error message if the account can not be found. If
+the log in is successful, a new session is created associated with the logged
+in user.
 
 \paragraph{Update Account}
-The account page allows users to update their information. The user may complete an HTML form requesting a new password or providing a new email address. The user's information is then updated in the database.
+The account page allows users to update their information. The user may
+complete an HTML form requesting a new password or providing a new email
+address. The user's information is then updated in the database.
 
 \paragraph{Request Dataset}
-The request dataset functionality allows a user to provide information about a dataset they desire. When a user requests a new dataset, an HTML form is provided allowing the user to specify their needs. The form requires the user to describe the following about the dataset:
+The request dataset functionality allows a user to provide information about a
+dataset they desire. When a user requests a new dataset, an HTML form is
+provided allowing the user to specify their needs. The form requires the user
+to describe the following about the dataset:
 \begin{itemize}
   \item The subject material of the dataset
   \item The time of day that the photos should be taken
   \item The location that the photos should be taken
   \item The minimum number of photos needed for the dataset
 \end{itemize}
-If one of these properties is irrelevant to the user, then they may specify that on the form as well. After the dataset is described, the user may submit it to the database.
+If one of these properties is irrelevant to the user, then they may specify
+that on the form as well. After the dataset is described, the user may submit
+it to the database.
 
 \paragraph{View Dataset Status}
-The researcher interface also allows the user to view the status of their datasets. When this page is viewed, the Go server provides the total count of the photos that currently exist for the dataset.
+The researcher interface also allows the user to view the status of their
+datasets. When this page is viewed, the Go server provides the total count of
+the photos that currently exist for the dataset.
 
 \paragraph{Download Dataset}
-When a dataset has reached the minimum number of photos requested by the user, they may download the dataset from the server. The server gets all images from the dataset and generates a single file containing the metadata for each one. Then each images is compressed and the download is sent to the user.
+When a dataset has reached the minimum number of photos requested by the user,
+they may download the dataset from the server. The server gets all images from
+the dataset and generates a single file containing the metadata for each one.
+Then each images is compressed and the download is sent to the user.
 
 \begin{figure}[H]
   \caption{Researcher Interface Mockup}
@@ -74,19 +103,28 @@ When a dataset has reached the minimum number of photos requested by the user, t
 \end{figure}
 
 \subsection{PhotoHunter}
-The PhotoHunter application allows users to compete against one another to capture photos in a scavenger hunt.
+The PhotoHunter application allows users to compete against one another to
+capture photos in a scavenger hunt.
 
 \paragraph{Create Account/Logging In}
-The PhotoHunter application will use a Facebook API to allow users to create accounts and log in using their Facebook accounts.
+The PhotoHunter application will use a Facebook API to allow users to create
+accounts and log in using their Facebook accounts.
 
 \paragraph{Provide Lists}
-When a user is logged in, the application gets their location data. This data is sent to the PhotoHunter API, which then provides a list of subjects for user to photograph.
+When a user is logged in, the application gets their location data. This data
+is sent to the PhotoHunter API, which then provides a list of subjects for user
+to photograph.
 
 \paragraph{Select Topic and Photograph}
-The user may choose a topic from the list of available ones. Their smart phone's camera is then opened. After the user takes a photo and confirms it, the application uploads the photo the database. The user's points are then updated in the database.
+The user may choose a topic from the list of available ones. Their smart
+phone's camera is then opened. After the user takes a photo and confirms it,
+the application uploads the photo the database. The user's points are then
+updated in the database.
 
 \paragraph{Leaderboards}
-The user may view their ranking against other PhotoHunter users based on their score. This view pulls down the point data from the database, and allows user to narrow their search by location.
+The user may view their ranking against other PhotoHunter users based on their
+score. This view pulls down the point data from the database, and allows user
+to narrow their search by location.
 
 \begin{figure}[H]
   \caption{PhotoHunter Scavenger List Mockup}
@@ -101,16 +139,26 @@ The user may view their ranking against other PhotoHunter users based on their s
 \end{figure}
 
 \subsection{Quick Pic}
-The Quick Pic application allows users to compete against one another by quickly identifying the subjects of images.
+The Quick Pic application allows users to compete against one another by
+quickly identifying the subjects of images.
 
 \paragraph{Create Account/Logging In}
-The Quick Pic application will use a Facebook API to allow users to create accounts and log in using their Facebook accounts.
+The Quick Pic application will use a Facebook API to allow users to create
+accounts and log in using their Facebook accounts.
 
 \paragraph{Quiz}
-When a user has logged in, they may begin a quiz. The quiz takes images from the database that were submitted by the PhotoHunter application, and generates four choices. One of these choices is the expected subject, based on the dataset that the image was submitted to in PhotoHunter. The application shows the user the image for a brief second, then asks the user to choose the correct label. The user's answer is then submitted to the database. The user then receives a number of points based on the answers given by other users.
+When a user has logged in, they may begin a quiz. The quiz takes images from
+the database that were submitted by the PhotoHunter application, and generates
+four choices. One of these choices is the expected subject, based on the
+dataset that the image was submitted to in PhotoHunter. The application shows
+the user the image for a brief second, then asks the user to choose the correct
+label. The user's answer is then submitted to the database. The user then
+receives a number of points based on the answers given by other users.
 
 \paragraph{Leaderboards}
-The user may view their ranking against other Quick Pic users based on their score. This view pulls down the point data from the database, and allows user to narrow their search by location.
+The user may view their ranking against other Quick Pic users based on their
+score. This view pulls down the point data from the database, and allows user
+to narrow their search by location.
 
 \begin{figure}[H]
   \caption{Quick Pic Image Mockup}
@@ -151,9 +199,9 @@ Then the API will generate the following scavenger list entries:
   \item Cats Between 1pm and 8pm EST
 \end{itemize}
 
-The Request is expected to already have the data laid out in such a
-manner that constructing this list is trivial (essentially the cartesian
-product of elements of lists).
+The Request is expected to already have the data laid out in such a manner that
+constructing this list is trivial (essentially the cartesian product of
+elements of lists).
 
 These Scavenger Lists will be made available to the PhotoHunter application
 with some constraints.  The constraints are to be designed to avoid presenting
@@ -258,17 +306,23 @@ After logging in, a user may visit one of the following pages on the dashboard:
 \begin{itemize}
   \item Datasets: This page is where the user may do any of the following:
     \begin{itemize}
-      \item Request Dataset: A user may complete an HTML form specifying a dataset that meets their needs. The user may then submit the dataset definition to the database.
-      \item View Datasets: A user may view the status of their datasets. As new images are submitted, verified, and added to the dataset, the updated number may be viewed by the researcher.
+			\item Request Dataset: A user may complete an HTML form specifying a
+						dataset that meets their needs. The user may then submit the dataset definition
+						to the database.
+			\item View Datasets: A user may view the status of their datasets. As new
+						images are submitted, verified, and added to the dataset, the updated number
+						may be viewed by the researcher.
       \item Download Dataset: After a dataset is complete, a user may download their dataset.
     \end{itemize}
-  \item Account: This page allows users to update account information, including their email address or password.
+	\item Account: This page allows users to update account information,
+				including their email address or password.
 
 \end{itemize}
 \subsection{PhotoHunter}
 
 \begin{itemize}
-  \item Log In: A user can log in to their account using their credentials. They will then be taken to their dashboard.
+	\item Log In: A user can log in to their account using their credentials.
+				They will then be taken to their dashboard.
   \item Create Account: A new user may create an account by signing up.
 \end{itemize}
 
@@ -276,12 +330,12 @@ After logging in, a user may visit one of the following views:
 
 \begin{itemize}
   \item Scavenger List: A list of Scavenger List Entries which have been
-    requested by Research Teams. Choosing an entry will launch the native Camera
-    application, allowing users to capture and submit a picture.
+				requested by Research Teams. Choosing an entry will launch the native Camera
+				application, allowing users to capture and submit a picture.
   \item Leaderboard: A view presenting an overview of the top users relative to
-    the logged in user for the PhotoHunter application.  Various metrics may be
-    presented, such as ``Most Points (All Time)'', ``Most Points (Past Month)'',
-    ``Most Submissions (All Time)'', ``Most Points Per Submission (All Time)''.
+				the logged in user for the PhotoHunter application.  Various metrics may be
+				presented, such as ``Most Points (All Time)'', ``Most Points (Past Month)'',
+				``Most Submissions (All Time)'', ``Most Points Per Submission (All Time)''.
 
   \item Account: A view allowing the user to update account information.
 \end{itemize}
@@ -307,12 +361,27 @@ After logging in, a user may visit one of the following views:
   \item Account: A view allowing the user to update account information.
 \end{itemize}
 \section{Design Considerations}
-Initially, the mobile applications for the PhotoHunter Project were to be developed for both iOS and Android. However, due to the limited time available and scope of the project, the team decided to develop the applications just for Android. 
+Initially, the mobile applications for the PhotoHunter Project were to be
+developed for both iOS and Android. However, due to the limited time available
+and scope of the project, the team decided to develop the applications just for
+Android. 
 
 \section{Sizing Estimate}
-The researcher interface will be handled by a server written in Go. The Go language has several packages to support server development. Hence, the estimated size of the server itself is less than 1000 lines of code. We will use the Bootstrap framework for the front end of the researcher interface, greatly reducing the number of lines of HTML and CSS we need to to write. The API for the application will also be written in Go. As the API does the majority of the work, we estimate it to be ~2000 lines of code. The API will also use SQL to interact with the database. Due to the size of the database and the number of entities, an estimated 1000 lines of SQL will be needed to communicate with the database.
+The researcher interface will be handled by a server written in Go. The Go
+language has several packages to support server development. Hence, the
+estimated size of the server itself is less than 1000 lines of code. We will
+use the Bootstrap framework for the front end of the researcher interface,
+greatly reducing the number of lines of HTML and CSS we need to to write. The
+API for the application will also be written in Go. As the API does the
+majority of the work, we estimate it to be ~2000 lines of code. The API will
+also use SQL to interact with the database. Due to the size of the database and
+the number of entities, an estimated 1000 lines of SQL will be needed to
+communicate with the database.
 
-The mobile applications will each be built with Cordova. The Cordova framework generates boilerplate code automatically. This reduces the number of lines needed to complete a working application. However, we still estimate a total of 2000 lines each for the two mobile applications.
+The mobile applications will each be built with Cordova. The Cordova framework
+generates boilerplate code automatically. This reduces the number of lines
+needed to complete a working application. However, we still estimate a total of
+2000 lines each for the two mobile applications.
 
 \section{References}
 Following are a list of technologies we intend to use:
