adding photohunter app tests and makefile

--- a/docs/testingplan/testingplan.tex
+++ b/docs/testingplan/testingplan.tex
@@ -31,6 +31,29 @@ provides entertainment for users and useful datasets for researchers.
 
 \section{Unit Testing/Functional Testing}
 \subsection{PhotoHunter}
+
+For the Photohunter app, we will test each function on the Android (4.4.2)
+mobile platform.  The tests we will perform are:
+\begin{itemize}
+
+  \item Logging into the app through Facebook and create an account
+ 
+  \item Logging into the app with an already existing account
+
+  \item Retrieving the correct device location
+
+  \item Sending the current location to the Photohunter API and receiving
+        a list of datasets
+
+  \item Selecting a dataset from the generated list
+  
+  \item Taking a picture with the built in camera and uploading to the 
+        database through the Photohunter API
+
+  \item Correctly populating the leaderboard with point data
+
+\end{itemize}
+
 \subsection{Quick Pic}
 \subsection{Researcher Interface}
  
