Researcher interface testing plan

--- a/docs/testingplan/testingplan.tex
+++ b/docs/testingplan/testingplan.tex
@@ -77,6 +77,16 @@ For the \textit{Quick Pic} app, we will test each function on the Android
 
 \subsection{Researcher Interface}
 
+For the Researcher Interface, we will test each page on Chrome (Stable 41.0), and Firefox (37.0.1). The tests we will perform are as follows:
+
+\begin{itemize}
+\item Account creation
+\item Logging in as an existing user
+\item Creating new data sets
+\item Managing datasets (editing, deletion, finalizing)
+\item Dataset publication
+\item Datapoint scoring
+\end{itemize}
 
 \section{System Testing}
 System testing will focus on the interaction between the PhotoHunter app, Quick Pic app, researcher interface, and the PhotoHunter API.
