guidelines for talk

--- a/docs/final_presentation/pres.tex
+++ b/docs/final_presentation/pres.tex
@@ -33,12 +33,7 @@
   \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{ss_flowchart}
 \end{frame}
 
-\section{Backend}
-
-\begin{frame}{ER Diagram}
-  \centering
-  \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{er}
-\end{frame}
+\subsection{Researchers Interface}
 
 \begin{frame}{Researchers Interface}
   \centering
@@ -46,7 +41,7 @@
   \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{researchers}
 \end{frame}
 
-\section{PhotoHunter}
+\subsection{PhotoHunter}
 
 \begin{frame}{PhotoHunter}
   \begin{columns}[c]
@@ -63,7 +58,7 @@
   \end{columns}
 \end{frame}
 
-\section{QuickPic}
+\subsection{QuickPic}
 
 \begin{frame}{QuickPic}
   \begin{columns}[c]
@@ -79,6 +74,31 @@
     \end{column}
   \end{columns}
 \end{frame}
+
+\subsection{Backend}
+
+\begin{frame}{ER Diagram}
+  \centering
+  \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{er}
+\end{frame}
+
+% Discuss problems, and your solutions
+\section{Problems}
+
+% Discuss lessons learned while doing the project
+\section{Lessons Learned}
+
+% Discuss your initial assumptions about the project compared to what you know now
+\section{Assumptions}
+
+% Does the project match what the customer initially wanted, how did it evolve
+\section{Evolution}
+
+% Changes requested by the customer, or changes to specifications due to implementation
+\section{Changes}
+
+% Discuss future enhancements, usage
+\section{The Future!}
 
 \frame{\centering Thanks!}
 
