added new photohunter figs

--- a/docs/final_presentation/pres.tex
+++ b/docs/final_presentation/pres.tex
@@ -47,13 +47,28 @@
   \begin{columns}[c]
     \begin{column}{0.5\columnwidth}
       \centering
-			\todo{add in screenshots of actual app}
-      %\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{ss_photohunter_dataset}
+      \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{photohunter/login}
     \end{column}
     \begin{column}{0.5\columnwidth}
       \centering
-			\todo{add in screenshots of actual app}
-      %\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{ss_photohunter_upload}
+      \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{photohunter/fb}
+    \end{column}
+  \end{columns}
+\end{frame}
+
+\begin{frame}{PhotoHunter}
+  \begin{columns}[c]
+    \begin{column}{0.3\columnwidth}
+      \centering
+      \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{photohunter/list}
+    \end{column}
+    \begin{column}{0.3\columnwidth}
+      \centering
+      \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{photohunter/user}
+    \end{column}
+    \begin{column}{0.3\columnwidth}
+      \centering
+      \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{photohunter/submit}
     \end{column}
   \end{columns}
 \end{frame}
