added some thoughts to the future work slide

--- a/docs/final_presentation/pres.tex
+++ b/docs/final_presentation/pres.tex
@@ -115,6 +115,18 @@
 % Discuss future enhancements, usage
 \section{The Future!}
 
+\begin{frame}{The Future!}
+	\begin{itemize}
+		
+		\item Leaderboard Integration
+
+		\item Deploy to other platforms
+
+		\item \todo{Add more things for the future}
+
+	\end{itemize}
+\end{frame}
+
 \frame{\centering Thanks!}
 
 \end{document}
