problems and evolution

--- a/docs/final_presentation/pres.tex
+++ b/docs/final_presentation/pres.tex
@@ -100,6 +100,20 @@
 % Discuss problems, and your solutions
 \section{Problems}
 
+\begin{frame}{Problems}
+	\begin{itemize}
+
+		\item \todo{Most of these could go on the lessons slide as well}
+
+		\item Learning Cordova and app development from zero knowledge
+
+		\item Integrating with the Facebook API
+
+		\item \todo{add more here}
+
+	\end{itemize}
+\end{frame}
+
 % Discuss lessons learned while doing the project
 \section{Lessons Learned}
 
@@ -108,6 +122,21 @@
 
 % Does the project match what the customer initially wanted, how did it evolve
 \section{Evolution}
+
+\begin{frame}{Evolution}
+	\begin{itemize}
+
+		\item Initial concept included only one app (Photohunter)
+
+		\item QuickPic came from need to verify image categories (but was going to
+					be a part of the Photohunter app at first)
+
+		\item \todo{API came from need to interface with both apps and the web backend?}
+
+		\item \todo{add more here}
+
+	\end{itemize}
+\end{frame}
 
 % Changes requested by the customer, or changes to specifications due to implementation
 \section{Changes}
