todo on changes slide

--- a/docs/final_presentation/pres.tex
+++ b/docs/final_presentation/pres.tex
@@ -141,6 +141,14 @@
 % Changes requested by the customer, or changes to specifications due to implementation
 \section{Changes}
 
+\begin{frame}{Changes}
+	\begin{itemize}
+
+		\item \todo{add some part that changed because of time constraints or because of cordova}
+
+	\end{itemize}
+\end{frame}
+
 % Discuss future enhancements, usage
 \section{The Future!}
 
