--- a/docs/final_presentation/pres.tex
+++ b/docs/final_presentation/pres.tex
@@ -126,10 +126,10 @@
 \begin{frame}{Evolution}
 	\begin{itemize}
 
-		\item Initial concept included only one app (Photohunter)
+		\item Initial concept included only one app (PhotoHunter)
 
 		\item QuickPic came from need to verify image categories (but was going to
-					be a part of the Photohunter app at first)
+					be a part of the PhotoHunter app at first)
 
 		\item \todo{API came from need to interface with both apps and the web backend?}
 
@@ -144,7 +144,7 @@
 \begin{frame}{Changes}
 	\begin{itemize}
 
-		\item \todo{add some part that changed because of time constraints or because of cordova}
+		\item \todo{add some part that changed because of time constraints or because of Cordova}
 
 	\end{itemize}
 \end{frame}
