added a few future ideas and lessons. also spell check being in make all was driving me up a wall

--- a/docs/final_presentation/pres.tex
+++ b/docs/final_presentation/pres.tex
@@ -108,6 +108,8 @@
 
 		\item Integrating with the Facebook API
 
+		\item Piecing together bits of documentation from multiple projects
+
 		\item \todo{add more here}
 
 	\end{itemize}
@@ -152,6 +154,10 @@
 		\item Leaderboard Integration
 
 		\item Deploy to other platforms
+
+		\item Security checks on apps and web interface
+
+		\item Market the apps and get users to use them/test them
 
 		\item \todo{Add more things for the future}
 
