--- a/docs/final_presentation/pres.tex
+++ b/docs/final_presentation/pres.tex
@@ -159,6 +159,8 @@
 
 		\item Market the apps and get users to use them/test them
 
+		\item Make apps more "game-y"
+
 		\item \todo{Add more things for the future}
 
 	\end{itemize}
